# atsconnector

./: main.py  pyproject.toml  requirements.txt
notebooks/: 01_parsing_poc.ipynb  02_normalization_poc.ipynb
utils/: normalizers.py  parsers.py
