[project]
name = "atsconnector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.3.0",
    "jupyterlab>=4.6.2",
    "pdfplumber>=0.11.10",
    "rapidfuzz>=3.14.5",
]

[tool.setuptools]
packages = ["utils"]
